objects/Rules_Execution__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings to Manage the Execution of Validation and Workflow Rules.</description>
    <label>Rules Execution</label>
    <fields>
        <fullName>Run__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Use in Validation or workflow rules to control whether the rule executes. Default value is TRUE; rule are executed.</inlineHelpText>
        <label>Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Validation_Rules__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Case Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If TRUE, used to run validation rules on Account&apos;s Billing Address.</description>
        <label>Account Billing Address</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>